--- a/CSS/styleProva.css
+++ b/CSS/styleProva.css
@@ -4,6 +4,14 @@
 body{
 	background-color: blueviolet;	
 }
+.imgsair {
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	left: 70px;
+	cursor: pointer;
+	filter: invert(100%);
+}
 .container {
 	margin: 0 auto;
 	max-width: 75%;
